[gd_scene load_steps=8 format=3 uid="uid://ci1y4rydunn2t"]

[ext_resource type="Script" path="res://Scripts/enemy_basic.gd" id="1_oxo2l"]
[ext_resource type="Texture2D" uid="uid://cmgydimid2fec" path="res://Assets/shadow_small.png" id="2_jb6il"]
[ext_resource type="Texture2D" uid="uid://b41jkcv2ni17t" path="res://Assets/light_120_02.png" id="4_d0wig"]
[ext_resource type="Texture2D" uid="uid://c77fg4lkdytoa" path="res://Assets/Items/MarkSmallExclamation.png" id="4_fwcav"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4000s"]
radius = 9.13998

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sss86"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2lhq6"]
bg_color = Color(0, 100, 0, 1)

[node name="EnemyBasic" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 4
collision_mask = 53
script = ExtResource("1_oxo2l")

[node name="Mark" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -16)
texture = ExtResource("4_fwcav")

[node name="ShadowSmall" type="Sprite2D" parent="."]
visible = false
z_index = 1
texture = ExtResource("2_jb6il")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.9, 0.47)
shape = SubResource("CircleShape2D_4000s")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-32, 0)
collision_mask = 53

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(0.2, 0.2)
color = Color(1, 0, 0, 1)
energy = 10.0
shadow_enabled = true
texture = ExtResource("4_d0wig")

[node name="LifeBar" type="ProgressBar" parent="."]
offset_left = -11.0
offset_top = -9.0
offset_right = 11.0
offset_bottom = -8.0
theme_override_styles/background = SubResource("StyleBoxFlat_sss86")
theme_override_styles/fill = SubResource("StyleBoxFlat_2lhq6")
step = 1.0
value = 50.0
show_percentage = false

[node name="ShotCooldown" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ResearchCoolDown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="ResearchCoolDown" to="." method="_on_research_cool_down_timeout"]
